--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-Olè
+<!DOCTYPE html>
+<html>
+<head>
+  <!-- Standard Meta -->
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+
+  <!-- Site Properities -->
+  <title>Work in progress</title>
+
+  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Open+Sans:300italic,400,300,700' rel='stylesheet' type='text/css'>
+
+  <link rel="stylesheet" type="text/css" href="style/packaged/css/semantic.css">
+  <link rel="stylesheet" type="text/css" href="style/index.css">
+
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.js"></script>
+
+</head>
+<body id="home">
+  <div class="container">
+
+      <img width="500px" title="" alt="" src="wip.png">
+
+      <h1>Work in progress</h1>
+      <p>
+        I'm not even that good in html, so it may take some time for me to have a proper webpage :)
+      </p>
+
+      <div id="email">
+        <h3>lastname DOT firstname AT gmail DOT com</h3>
+        <p>(BTW, my name is Nicola Parrello)</p>
+      </div>
+    </div>
+</body>
+
+</html>
