--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       <h1>Work in progress</h1>
       <p>
-        I'm not even that good in html, so it may take some time for me to have a proper webpage :)
+        I'm not even that good with html, so it may take some time for me to have a proper webpage :)
       </p>
 
       <div id="email">
