image size test

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body id="home">
   <div class="container">
 
-      <img width="500px" title="" alt="" src="wip.png">
+      <img class="wip wip-display" title="" alt="" src="wip.png">
 
       <h1>Work in progress</h1>
       <p>
