--- a/index copy.html
+++ b/index copy.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- Standard Meta -->
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
+  <!-- Site Properities -->
   <title>Work in progress</title>
 
-  <link href='style/fonts/big-john.oft' rel='stylesheet' type='text/css'>
-  <link href='style/fonts/slim-joe.oft' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Open+Sans:300italic,400,300,700' rel='stylesheet' type='text/css'>
 
   <link rel="stylesheet" type="text/css" href="style/packaged/css/semantic.css">
   <link rel="stylesheet" type="text/css" href="style/index.css">
@@ -19,17 +20,16 @@
 <body id="home">
   <div class="container">
 
-      <img class="wip wip-display" title="" alt="" src="img/wip.png">
+      <img class="wip wip-display" title="" alt="" src="wip.png">
 
       <h1>Work in progress</h1>
       <p>
-        I'm not even that good with html, so it may take some time for me to have a proper webpage. :)
+        I'm not even that good with html, so it may take some time for me to have a proper webpage :)
       </p>
 
       <div id="email">
-        <p>Drop me a line at</p>
-        <h3>parrello DOT nicola AT gmail DOT com</h3>
-        <p>or download my vCard from <a href="files/nicola-parrello.vcf">HERE</a>.</p>
+        <h3>lastname DOT firstname AT gmail DOT com</h3>
+        <p>(BTW, my name is Nicola Parrello)</p>
       </div>
     </div>
 </body>
