--- a/doistillhavetimetowritemythesis.html
+++ b/doistillhavetimetowritemythesis.html
@@ -2,6 +2,7 @@
 <head>
 	<script type="text/javascript" src="js/thesis.js"></script>
 	<link rel="stylesheet" type="text/css" href="style/thesis.css">
+	<title>Do I still have time to write my thesis?</title>
 </head>
 <div id="answer">
 	NO
