thesis metadata changed

--- a/thesis.html
+++ b/thesis.html
@@ -1,5 +1,8 @@
 <html lang="en">
 <head>
+	<meta property="og:title" content="Do I still have time to write my thesis?" />
+	<meta property="og:site_name" content="parrello.me"/>
+
 	<script type="text/javascript" src="js/thesis.js"></script>
 	<link rel="stylesheet" type="text/css" href="style/thesis.css">
 	<title>Do I still have time to write my thesis?</title>
