--- a/index.html
+++ b/index.html
@@ -5,33 +5,30 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
-  <title>Work in progress</title>
+  <title>WORK IN PROGRESS</title>
 
-  <link href='style/fonts/big-john.oft' rel='stylesheet' type='text/css'>
-  <link href='style/fonts/slim-joe.oft' rel='stylesheet' type='text/css'>
-
+  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="style/packaged/css/semantic.css">
   <link rel="stylesheet" type="text/css" href="style/index.css">
-
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.js"></script>
 
 </head>
 <body id="home">
   <div class="container">
-
       <img class="wip wip-display" title="" alt="" src="img/wip.png">
 
-      <h1>Work in progress</h1>
-      <p>
-        I'm not even that good with html, so it may take some time for me to have a proper webpage. :)
+      <h1>WORK IN PROGRESS</h1>
+      <p class="small">
+        Forgive me, but it might take some time for me to have a proper webpage. 😁
       </p>
-
-      <div id="email">
-        <p>Drop me a line at</p>
-        <h3>parrello DOT nicola AT gmail DOT com</h3>
-        <p>or download my vCard from <a href="files/nicola-parrello.vcf">HERE</a>.</p>
-      </div>
-    </div>
+      <p class="small">
+        In case you are interested, you can either drop me a line at
+      </p>
+      <p class="big">
+        <strong>parrello DOT nicola AT gmail DOT com</strong>,
+      </p>
+      <p class="small">download my vCard from <a href="files/nicola-parrello.vcf">HERE</a> or open my <a href="https://hu.linkedin.com/pub/nicola-parrello/97/b07/b50">LinkedIn page</a>.
+      </p>
+  </div>
 </body>
 
 </html>
