removed thesis page

--- a/thesis_old.html
+++ b/thesis_old.html
@@ -26,5 +26,6 @@
     }
 
     updateThesisDeadline(ThesisDeadline.stillTime());
+    console.log(ThesisDeadline.stillTime());
   </script>
 </body>
