--- a/_final/index.html
+++ b/_final/index.html
@@ -1,147 +1,55 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+	Aerial by HTML5 UP
+	html5up.net | @n33co
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-<head>
-  <!-- Standard Meta -->
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+	<head>
+		<title>Nicola Parrello | Developer</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+	</head>
+	<body class="loading">
+		<div id="wrapper">
+			<!--BACKGROUND IMAGE + COLOR. REPLACED WITH CUSTOM COLOR.-->
+			<div id="bg"></div>
+			<!--OVERLAY PATTERN-->
+			<!--<div id="overlay"></div>-->
+			<div id="main">
 
-  <!-- Site Properities -->
-  <title>Nicola Parrello</title>
+				<!-- Header -->
+					<header id="header">
+						<h1>Nicola Parrello</h1>
+						<p>Developer &nbsp;&bull;&nbsp; Nice guy &nbsp;&bull;&nbsp; Currently in CITY</p>
+						<p>reach me at <span class="italic">parrello DOT nicola AT gmail DOT com</span> or on <a href="https://hu.linkedin.com/pub/nicola-parrello/97/b07/b50"><span class="italic">LinkedIn</span></a></p>
+						<!--<nav>
+							<ul>
+								<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+								<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+								<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+							</ul>
+						</nav>-->
+					</header>
 
-  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Open+Sans:300italic,400,300,700' rel='stylesheet' type='text/css'>
+				<!-- Footer -->
+					<footer id="footer">
+						<span class="copyright">&copy; Nicola Parrello. Designed by <a href="http://html5up.net">HTML5 UP</a> and edited by me.</span>
+					</footer>
 
-  <link rel="stylesheet" type="text/css" href="semantic/css/semantic.css">
-  <link rel="stylesheet" type="text/css" href="styles/index.css">
-
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
-  <script src="semantic/javascript/semantic.js"></script>
-  <script src="scripts/index.js"></script>
-  <script src="scripts/locator.js"></script>
-
-  <script type="text/javascript">
-  $(document).ready(function() {
-  // Tooltip only Text
-  $('.masterTooltip').hover(function(){
-          // Hover over code
-          var title = $(this).attr('title');
-          $(this).data('tipText', title).removeAttr('title');
-          $('<p class="tooltip"></p>')
-          .text(title)
-          .appendTo('body')
-          .fadeIn('slow');
-  }, function() {
-          // Hover out code
-          $(this).attr('title', $(this).data('tipText'));
-          $('.tooltip').remove();
-  }).mousemove(function(e) {
-          var mousex = e.pageX + 20; //Get X coordinates
-          var mousey = e.pageY + 10; //Get Y coordinates
-          $('.tooltip')
-          .css({ top: mousey, left: mousex })
-  });
-  });
-  </script>
-
-</head>
-<body id="home">
-  <div class="ui inverted page grid masthead segment">
-    <div class="column">
-      <!--<div class="inverted secondary pointing ui menu">
-        <div class="header item">Cat University</div>
-        <div class="right menu">
-          <div class="ui top right pointing mobile dropdown link item">
-            Menu
-            <i class="dropdown icon"></i>
-            <div class="menu">
-              <a class="item">Classes</a>
-              <a class="item">Cocktail Hours</a>
-              <a class="item">Community</a>
-            </div>
-          </div>
-          <div class="ui dropdown link item">
-            Courses
-            <i class="dropdown icon"></i>
-            <div class="menu">
-              <a class="item">Petting</a>
-              <a class="item">Feeding</a>
-              <a class="item">Mind Reading</a>
-            </div>
-          </div>
-          <a class="item">Library</a>
-          <a class="item">Community</a>
-        </div>
-      </div>-->
-      <img src="images/me.png" class="ui circular medium image">
-      <div class="ui hidden transition information">
-        <h1 class="ui inverted header">
-          Nicola Parrello
-        </h1>
-        <p>Computer Scientist from Italy, loud guy, currently based in:<h2 class="masterTooltip" title="This should represent my actual current location. From time to time, my phone sends my coordinates to the website." id="location">loading..</h2></p>
-        <p>lastname DOT firstname AT gmail DOT com</p>
-        <!--<div class="large basic inverted animated fade ui button">
-          <div class="visible content">Come to ICU 2013</div>
-          <div class="hidden content">Register Now</div>
-        </div>-->
-      </div>
-    </div>
-  </div>
-  <div class="ui page grid overview segment">
-    <div class="ui two wide column"></div>
-    <div class="twelve wide column">
-      <div class="ui five column center aligned stackable divided grid">
-        <div class="column">
-          <a href="http://goo.gl/gocVGL" target="_blank">
-            <div class="ui icon header">
-              <i class="circular linkedin link icon"></i>
-            </div>
-          </a>
-        </div>
-        <div class="column">
-          <a href="http://goo.gl/eydWlT" target="_blank">
-            <div class="ui icon header">
-              <i class="circular instagram link icon"></i>
-            </div>
-          </a>
-        </div>
-        <div class="column">
-          <a href="http://goo.gl/5cvbkF" target="_blank">
-            <div class="ui icon header">
-              <i class="circular soundcloud link icon"></i>
-            </div>
-          </a>
-        </div>
-        <div class="column">
-          <a href="http://goo.gl/4kox9m" target="_blank">
-            <div class="ui icon header">
-              <i class="circular couchsurfing link icon"></i>
-            </div>
-          </a>
-        </div>
-        <div class="column">
-          <a href="http://goo.gl/3dOXa1" target="_blank">
-            <div class="ui icon header">
-              <i class="circular github link icon"></i>
-            </div>
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <footer>
-    <div class="footer-text">
-      <p>Designed with Semantic UI</p>
-    </div>
-  </footer>
-  <div id="latlng">
-    <div id="lat">
-      40.730885
-    </div>
-    <div id="lng">
-      -73.997383
-    </div>
-  </div>
-</body>
-
+			</div>
+		</div>
+		<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+		<script>
+			window.onload = function() { document.body.className = ''; }
+			window.ontouchmove = function() { return false; }
+			window.onorientationchange = function() { document.body.scrollTop = 0; }
+		</script>
+	</body>
 </html>
