--- a/final/index.html
+++ b/final/index.html
@@ -25,7 +25,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Nicola Parrello</h1>
-						<p>Developer &nbsp;&bull;&nbsp; Nice guy &nbsp;&bull;&nbsp; Currently in CITY</p>
+						<p>Developer &nbsp;&bull;&nbsp; Nice guy &nbsp;&bull;&nbsp; Currently in Italy</p>
 						<p>reach me at <span class="italic">parrello DOT nicola AT gmail DOT com</span> or on <a href="https://hu.linkedin.com/pub/nicola-parrello/97/b07/b50"><span class="italic">LinkedIn</span></a></p>
 						<!--<nav>
 							<ul>
